@@ -79,17 +79,19 @@ namespace Gendarme.Rules.Smells {
 
 		public MessageCollection CheckMethod (MethodDefinition method, Runner runner)
 		{
-			MessageCollection messageCollection = new MessageCollection ();
+			MessageCollection messageCollection = null;
 			InitWellKnownAutogeneratedNames ();
 
 			if (MethodIsTooLong (method) && !IsAutogenerated (method)) {
 				Location location = new Location (method.DeclaringType.Name, method.Name, 0);
 				Message message = new Message ("The method is too long.",location, MessageType.Error);
+				if (messageCollection == null)
+					messageCollection = new MessageCollection ();
 				messageCollection.Add (message);
 			}
 
-			if (messageCollection.Count == 0)
-				return null;
+			if (messageCollection == null || messageCollection.Count == 0)
+				return runner.RuleSuccess;
 			return messageCollection;
 		}
 	}
